--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,11 @@
 @import '~bootstrap/scss/bootstrap';
+
+img {
+  height: 400px;
+  margin-top: 20px;
+}
+
+h2 {
+  text-align: center;
+  margin-top: 20px;
+}
