Update the home index style
started styling fore home index

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,10 +10,7 @@ h2 {
   margin-top: 20px;
 }
 
-.d-flex {
-  justify-content: space-between;
-}
-
-.carousel-image {
-  
+.productCard {
+  display: flex;
+  justify-content: center;
 }
