Adds add to cart button

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,3 +9,11 @@ h2 {
   text-align: center;
   margin-top: 20px;
 }
+
+.d-flex {
+  justify-content: space-between;
+}
+
+.button-link {
+  color: white;
+}
