--- a/src/index.scss
+++ b/src/index.scss
@@ -21,22 +21,25 @@ h2 {
 .checkout-page {
   display: flex;
   flex-direction: column;
-  // margin: auto;
-  align-items: center;
-  // width: 80vw;
+  margin: auto;
+  // align-items: center;
 }
 
-.forms {
-  display: flex;
-  justify-content: space-between;
+.forms-container {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  gap: 100px;
+  border: 1px solid blue;
+  padding: 30px;
 }
 
 .checkout-form {
-  margin: auto;
-  width: 70%;
+  color: blue;
+  font-weight: bold;
 }
 
 .payment-box {
-  border: 3px solid blue;
+  // border: 3px solid blue;
+  // background-color: #;
   height: auto;
 }
