--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,6 @@
 
 img {
   max-height: 100vh;
-  margin-top: 20px;
 }
 
 h2 {
@@ -30,16 +29,55 @@ h2 {
   grid-template-columns: 50% 50%;
   gap: 100px;
   border: 1px solid blue;
-  padding: 30px;
-}
-
-.checkout-form {
-  color: blue;
   font-weight: bold;
+  color: blue;
+  padding: 30px;
+  background-color: rgba(10, 225, 111, 0.2);
 }
 
 .payment-box {
-  // border: 3px solid blue;
-  // background-color: #;
-  height: auto;
+  border: 3px solid blue;
+  background-color: white;
+  width: 400px;
+  padding: 30px;
+  border-radius: 30px;
+
+  & .form-group  {
+    color: blue;
+    font-weight: bold;
+    border-radius: 15px;
+    border: 1px dotted blue;
+    padding: 10px;
+
+    & input {
+      background-color: white;
+    }
+  }
+
+  & button {
+    color: white;
+    background-color: blue;
+    padding: 10px;
+    width: 100%;
+    margin-top: 15px;
+  }
+}
+
+.checkout-form {
+  & input {
+    color: blue;
+    font-weight: bold;
+    border-radius: 15px;
+    border-color: blue;
+    background-color: rgba(211, 216, 249, 0.9);
+  }
+}
+
+.card {
+  width: 400px;
+}
+
+.footer {
+  margin-top: 40px;
+  font-size: .92rem;
 }
