--- a/src/index.scss
+++ b/src/index.scss
@@ -74,7 +74,13 @@ h2 {
 }
 
 .card {
-  width: 400px;
+  width: 95%;
+  border-radius: 10px;
+}
+
+.show-product-image {
+  margin: 50px 50px;
+  border-radius: 10px;
 }
 
 .footer {
