Card img sizing and cart fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -74,6 +74,11 @@ h2 {
   border-radius: 10px;
 }
 
+.card-image {
+  width: 148px;
+  height: 200px;
+}
+
 .show-product-image {
   margin: 50px 50px;
   border-radius: 10px;
