--- a/src/index.scss
+++ b/src/index.scss
@@ -16,17 +16,20 @@ img {
 
 h2 {
   text-align: center;
+  letter-spacing: 2px;
   margin-top: 20px;
   font-family: 'Yellowtail', cursive;
 }
 
-p {
+p, .navbar-nav a, .card {
   font-family: 'Oswald', sans-serif;
+  letter-spacing: 2px;
 }
 
 .logo {
   font-family: 'Yellowtail', cursive;
   font-size: 30px;
+  letter-spacing: 3px;
 }
 
 .d-flex {
@@ -90,13 +93,20 @@ p {
 }
 
 .card {
-  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 250px;
   border-radius: 10px;
 }
 
 .card-image {
-  width: 100%;
+  width: inherit;
   height: 200px;
+}
+
+.card p:before {
+  content: '$';
 }
 
 .show-product-image {
